Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91073

Android: cursor movement in TextEdit is not tracked, so it can go behind the soft-keyboard

XMLWordPrintable

    • Android
    • 5c6b10c3cee5737dbc041d0463220898c8120807 (qt/qtbase/dev) 9a81a9766c56f4a99172b105d892c905278065a4 (qt/tqtc-qtbase/tqtc/lts-5.15)

      When editing text with many lines it can happen that the cursor goes behind the software keyboard. See qtbug-91073.mp4.

        1. qtbug-91073.mp4
          347 kB
        2. qtbug91073.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            piotrmi Piotr Mikolajczyk
            piotrmi Piotr Mikolajczyk
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes