src/plugins/platforms/android/qandroidinputcontext.cpp
@@ -47,6 +47,7 @@
 #include "qandroideventdispatcher.h"
 #include "qandroidinputcontext.h"
 #include "qandroidplatformintegration.h"
+#include "private/qhighdpiscaling_p.h"
 
 #include <QTextBoundaryFinder>
 #include <QTextCharFormat>
@@ -59,7 +60,6 @@
 #include <qthread.h>
 #include <qwindow.h>
 #include <qpa/qplatformwindow.h>
-
 QT_BEGIN_NAMESPACE
 
 namespace {
@@ -491,7 +491,7 @@ QAndroidInputContext::QAndroidInputContext()
     m_androidInputContext = this;
 
     QObject::connect(QGuiApplication::inputMethod(), &QInputMethod::cursorRectangleChanged,
-                     this, &QAndroidInputContext::updateSelectionHandles);
+                     this, &QAndroidInputContext::updateInputItemRectangle);
     QObject::connect(QGuiApplication::inputMethod(), &QInputMethod::anchorRectangleChanged,
                      this, &QAndroidInputContext::updateSelectionHandles);
     QObject::connect(QGuiApplication::inputMethod(), &QInputMethod::inputItemClipRectangleChanged, this, [this]{
@@ -889,10 +889,48 @@ void QAndroidInputContext::showInputPanel()
     else
         m_updateCursorPosConnection = connect(qGuiApp->focusObject(), SIGNAL(cursorPositionChanged()), this, SLOT(updateCursorPosition()));
 
-    QRect rect = screenInputItemRectangle();
+    QRect rect = cursorRect();
     QtAndroidInput::showSoftwareKeyboard(rect.left(), rect.top(), rect.width(), rect.height(),
+                                         screenInputItemRectangle().height(),
                                          query->value(Qt::ImHints).toUInt(),
                                          query->value(Qt::ImEnterKeyType).toUInt());
+}
+
+QRect QAndroidInputContext::cursorRect()
+{
+    QSharedPointer<QInputMethodQueryEvent> query = focusObjectInputMethodQuery();
+    // if single line, we do not want to mess with the editor's position, as we do not
+    // have to follow the cursor in vertical axis
+    if (query.isNull()
+        || (query->value(Qt::ImHints).toUInt() & Qt::ImhMultiLine) != Qt::ImhMultiLine)
+        return {};
+
+    auto im = qGuiApp->inputMethod();
+    if (!im)
+        return {};
+
+    const auto cursorRect= im->cursorRectangle().toRect();
+    QRect finalRect(inputItemRectangle().toRect());
+    const QWindow *window = qGuiApp->focusWindow();
+    const double pd = window
+        ? QHighDpiScaling::factor(window)
+        : QHighDpiScaling::factor(QtAndroid::androidPlatformIntegration()->screen());
+    finalRect.setY(cursorRect.y() * pd);
+    finalRect.setHeight(cursorRect.height() * pd);
+    //fiddle a bit with vert margins, so the tracking rectangle is not too tight.
+    finalRect += QMargins(0, cursorRect.height() / 4, 0, cursorRect.height() / 4);
+    return finalRect;
+}
+
+void QAndroidInputContext::updateInputItemRectangle()
+{
+    QRect rect = cursorRect();
+
+    if (!rect.isValid())
+        return;
+    QtAndroidInput::updateInputItemRectangle(rect.left(), rect.top(),
+                                             rect.width(), rect.height());
+    updateSelectionHandles();
 }
 
 void QAndroidInputContext::showInputPanelLater(Qt::ApplicationState state)
