src/android/jar/src/org/qtproject/qt5/android/QtNative.java
@@ -878,10 +878,25 @@ public class QtNative
         });
     }
 
+    private static void updateInputItemRectangle(final int x,
+                                                 final int y,
+                                                 final int w,
+                                                 final int h)
+    {
+        runAction(new Runnable() {
+            @Override
+            public void run() {
+                m_activityDelegate.updateInputItemRectangle(x, y, w, h);
+            }
+        });
+    }
+
+
     private static void showSoftwareKeyboard(final int x,
                                              final int y,
                                              final int width,
                                              final int height,
+                                             final int editorHeight,
                                              final int inputHints,
                                              final int enterKeyType)
     {
@@ -889,7 +904,7 @@ public class QtNative
             @Override
             public void run() {
                 if (m_activityDelegate != null)
-                    m_activityDelegate.showSoftwareKeyboard(x, y, width, height, inputHints, enterKeyType);
+                    m_activityDelegate.showSoftwareKeyboard(x, y, width, height, editorHeight, inputHints, enterKeyType);
             }
         });
     }
